--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -7,6 +7,7 @@
             </div>
             <ul class="flex flex-wrap justify-center space-x-4 mb-6">
                 <li><a href="/" class="text-gray-700 hover:text-primary transition-colors duration-200">Inicio</a></li>
+                <li><a href="https://status.nakamastream.lat/" class="text-gray-700 hover:text-primary transition-colors duration-200">Status</a></li>
                 <li><a href="/tos" class="text-gray-700 hover:text-primary transition-colors duration-200">Términos de Uso</a></li>
                 <li><a href="/privacy" class="text-gray-700 hover:text-primary transition-colors duration-200">Política de Privacidad</a></li>
             </ul>
