--- a/src/views/anime/anime-featured.ejs
+++ b/src/views/anime/anime-featured.ejs
@@ -20,20 +20,25 @@
     </script>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
-    <div class="container mx-auto max-w-4xl">
-        <div class="bg-white p-8 rounded-3xl shadow-2xl overflow-hidden w-full max-w-lg">
+    <div class="container mx-auto max-w-4xl mt-16">
+        <div class="bg-white p-8 rounded-3xl shadow-2xl overflow-hidden w-full max-w-lg mx-auto">
             <h2 class="text-3xl font-bold mb-6 text-center text-gray-800">Actualizar Anime del Día</h2>
             <form id="featuredAnimeForm" action="/anime/featured" method="POST" class="space-y-6">
                 <!-- Selección de Anime -->
                 <div>
                     <label for="animeId" class="block text-gray-700 text-sm font-semibold mb-2">Selecciona el Anime del Día:</label>
-                    <select id="animeId" name="animeId" class="w-full px-4 py-3 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-primary transition duration-300">
-                        <% animes.forEach(anime => { %>
-                            <option value="<%= anime.id %>" <%= anime.is_featured ? 'selected' : '' %>>
-                                <%= anime.name %>
-                            </option>
-                        <% }) %>
-                    </select>
+                    <div class="relative">
+                        <select id="animeId" name="animeId" class="w-full px-4 py-3 rounded-lg border-2 border-gray-300 focus:outline-none focus:border-primary transition duration-300 appearance-none">
+                            <% animes.sort((a, b) => a.name.localeCompare(b.name)).forEach(anime => { %>
+                                <option value="<%= anime.id %>" <%= anime.is_featured ? 'selected' : '' %>>
+                                    <%= anime.name %>
+                                </option>
+                            <% }) %>
+                        </select>
+                        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+                        </div>
+                    </div>
                 </div>
                 
                 <!-- URL de la Imagen Destacada -->
