--- a/src/views/components/mobile/bottom-navigation.ejs
+++ b/src/views/components/mobile/bottom-navigation.ejs
@@ -1,20 +1,20 @@
-<nav class="fixed bottom-0 left-0 right-0 bg-white shadow-lg md:hidden">
-    <div class="flex justify-around items-center h-16">
-      <a href="/" class="flex flex-col items-center text-gray-600 hover:text-primary transition duration-300">
-        <i class="fas fa-home text-xl"></i>
-        <span class="text-xs mt-1">Inicio</span>
+<nav class="fixed bottom-0 left-0 right-0 bg-white shadow-lg md:hidden z-50">
+    <div class="flex justify-around items-end h-20 pb-2">
+      <a href="/" class="flex flex-col items-center text-gray-600 hover:text-orange-500 transition-all duration-300 ease-in-out transform hover:scale-110 hover:-translate-y-1 mx-2">
+        <i class="fas fa-home text-2xl mb-1 transition-transform duration-300 ease-in-out hover:rotate-12"></i>
+        <span class="text-xs opacity-0 group-hover:opacity-100 transition-opacity duration-300">Inicio</span>
       </a>
-      <a href="/animes/api/search" class="flex flex-col items-center text-gray-600 hover:text-primary transition duration-300">
-        <i class="fas fa-search text-xl"></i>
-        <span class="text-xs mt-1">Buscar</span>
+      <a href="/animes/api/search" class="flex flex-col items-center text-gray-600 hover:text-orange-500 transition-all duration-300 ease-in-out transform hover:scale-110 hover:-translate-y-1 mx-2">
+        <i class="fas fa-search text-2xl mb-1 transition-transform duration-300 ease-in-out hover:rotate-45"></i>
+        <span class="text-xs opacity-0 group-hover:opacity-100 transition-opacity duration-300">Buscar</span>
       </a>
-      <a href="/calendario" class="flex flex-col items-center text-gray-600 hover:text-primary transition duration-300">
-        <i class="fas fa-calendar text-xl"></i>
-        <span class="text-xs mt-1">Calendario</span>
+      <a href="/calendario" class="flex flex-col items-center text-gray-600 hover:text-orange-500 transition-all duration-300 ease-in-out transform hover:scale-110 hover:-translate-y-1 mx-2">
+        <i class="fas fa-calendar text-2xl mb-1 transition-transform duration-300 ease-in-out hover:rotate-12"></i>
+        <span class="text-xs opacity-0 group-hover:opacity-100 transition-opacity duration-300">Calendario</span>
       </a>
-      <a href="/profile" class="flex flex-col items-center text-gray-600 hover:text-primary transition duration-300">
-        <i class="fas fa-user text-xl"></i>
-        <span class="text-xs mt-1">Perfil</span>
+      <a href="/profile" class="flex flex-col items-center text-gray-600 hover:text-orange-500 transition-all duration-300 ease-in-out transform hover:scale-110 hover:-translate-y-1 mx-2">
+        <i class="fas fa-user text-2xl mb-1 transition-transform duration-300 ease-in-out hover:rotate-12"></i>
+        <span class="text-xs opacity-0 group-hover:opacity-100 transition-opacity duration-300">Perfil</span>
       </a>
     </div>
 </nav>
