Desktop.ejs - bugFix Meta=content

--- a/src/views/start/Desktop.ejs
+++ b/src/views/start/Desktop.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NakamaStream Desktop - Tu Anime Favorito en tu PC</title>
     <meta name="description"
-        content="Descarga NakamaStream Desktop y disfruta de tus animes favoritos en alta calidad, sin anuncios y con funciones exclusivas para PC.">
+        content="Descarga NakamaStream Desktop y disfruta de tus animes favoritos en alta calidad, sin anuncios y con mejor Rendimiento para PC.">
     <link rel="shortcut icon"
         href="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true"
         type="image/x-icon">
