episode-detail-mobile.ejs - add bottom-navigation

--- a/src/views/anime/episode-detail-mobile.ejs
+++ b/src/views/anime/episode-detail-mobile.ejs
@@ -224,6 +224,10 @@
                 <% } %>
             </footer>
         </div>
+        <br>
+        <br>
+        <br>
+        <%- include('../components/mobile/bottom-navigation') %>
     </main>
 
     <!-- Modal para la información del usuario -->
