anime-detail-mobile.ejs - add bottom-navigation

--- a/src/views/anime/anime-detail-mobile.ejs
+++ b/src/views/anime/anime-detail-mobile.ejs
@@ -251,6 +251,10 @@
             </div>
         </div>
 
+    <br>
+    <br>
+    <%- include('../components/mobile/bottom-navigation') %>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/src/public/js/anime/profile-anime-menu.js"></script>
