--- a/src/views/anime/anime-list-mobile.ejs
+++ b/src/views/anime/anime-list-mobile.ejs
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <link rel="stylesheet" href="/src/public/css/extra/anime-list-mobile-animated.css">
 </head>
 <body class="font-roboto text-gray-800">
@@ -172,7 +172,29 @@
                 </div>
             </div>
         </div>
-      </div>
+    </div>
+
+    <!-- Iconos de redes sociales -->
+    <div class="container mx-auto px-4 py-4 text-center">
+        <h3 class="text-lg font-semibold mb-4 text-gray-800">Síguenos en nuestras redes sociales</h3>
+        <div class="flex justify-center space-x-6">
+            <a href="https://discord.com/invite/Rdz4yQneMK" target="_blank" class="text-gray-500 hover:text-blue-600">
+                <i class="fab discord text-2xl"></i>
+            </a>
+            <a href="https://bsky.app/profile/nakamastream.lat" target="_blank" class="text-gray-500 hover:text-blue-400">
+                <i class="fab fa-twitter text-2xl"></i>
+            </a>
+            <a href="https://www.instagram.com/nakamastreamoficial/" target="_blank" class="text-gray-500 hover:text-pink-500">
+                <i class="fab fa-instagram text-2xl"></i>
+            </a>
+            <a href="https://www.tiktok.com/@nakamastreamoficial?lang" target="_blank" class="text-gray-500 hover:text-pink-500">
+                <i class="fab fa-tiktok text-2xl"></i>
+            </a>
+            <a href="https://www.youtube.com/@NakamaStreamOficial" target="_blank" class="text-gray-500 hover:text-red-600">
+                <i class="fab fa-youtube text-2xl"></i>
+            </a>
+        </div>
+    </div>
 
     <!-- Recientes Animes -->
     <div class="container mx-auto px-4 py-4">
