--- a/src/views/anime/anime-list-mobile.ejs
+++ b/src/views/anime/anime-list-mobile.ejs
@@ -179,10 +179,10 @@
         <h3 class="text-lg font-semibold mb-4 text-gray-800">Síguenos en nuestras redes sociales</h3>
         <div class="flex justify-center space-x-6">
             <a href="https://discord.com/invite/Rdz4yQneMK" target="_blank" class="text-gray-500 hover:text-blue-600">
-                <i class="fab discord text-2xl"></i>
+                <i class="fab fa-discord text-2xl"></i>
             </a>
             <a href="https://bsky.app/profile/nakamastream.lat" target="_blank" class="text-gray-500 hover:text-blue-400">
-                <i class="fab fa-twitter text-2xl"></i>
+                <i class="fab fa-bluesky text-2xl"></i>
             </a>
             <a href="https://www.instagram.com/nakamastreamoficial/" target="_blank" class="text-gray-500 hover:text-pink-500">
                 <i class="fab fa-instagram text-2xl"></i>
