--- a/src/views/anime/anime-search-mobile.ejs
+++ b/src/views/anime/anime-search-mobile.ejs
@@ -54,30 +54,51 @@
                         <i id="mobile-menu-icon" class="fas fa-bars transition-transform duration-500"></i>
                     </button>
                     <!-- Desktop Menu -->
-                    <div class="hidden md:flex space-x-4">
-                        <a href="/" class="border-b-2 border-orange-500 text-gray-900 text-sm font-medium transition duration-300 hover:scale-110 hover:text-orange-500">Inicio</a>
-                        <a href="/news" class="border-b-2 border-transparent text-gray-500 hover:border-orange-500 hover:text-orange-500 text-sm font-medium transition duration-300 hover:scale-110">Noticias</a>
-                        <a href="/calendario" class="border-b-2 border-transparent text-gray-500 hover:border-orange-500 hover:text-orange-500 text-sm font-medium transition duration-300 hover:scale-110">Calendario</a>
-                        <a href="/animes/api/saved-animes" class="border-b-2 border-transparent text-gray-500 hover:border-orange-500 hover:text-orange-500 text-sm font-medium transition duration-300 hover:scale-110">Guardados</a>
+                    <div class="hidden md:flex justify-center space-x-6">
+                        <a href="/"
+                            class="border-b-2 border-orange-500 text-gray-900 text-lg font-semibold transition duration-300 hover:scale-110 hover:text-orange-500">Inicio</a>
+                        <a href="/news"
+                            class="border-b-2 border-transparent text-gray-600 hover:border-orange-500 hover:text-orange-500 text-lg font-semibold transition duration-300 hover:scale-110">Noticias</a>
+                        <a href="/calendario"
+                            class="border-b-2 border-transparent text-gray-600 hover:border-orange-500 hover:text-orange-500 text-lg font-semibold transition duration-300 hover:scale-110">Calendario</a>
+                        <a href="/animes/api/saved-animes"
+                            class="border-b-2 border-transparent text-gray-600 hover:border-orange-500 hover:text-orange-500 text-lg font-semibold transition duration-300 hover:scale-110">Guardados</a>
 
                         <!-- User Menu -->
-                        <div class="relative group">
-                            <button id="user-menu-toggle" class="flex items-center text-gray-600 focus:outline-none hover:text-primary transition duration-300">
-                                <img src="<%= profile_image_url || '/default-profile-image.png' %>" alt="User Avatar" class="w-8 h-8 rounded-full mr-2 hover:scale-110 transition-transform duration-300">
-                                <span class="text-sm font-medium group-hover:text-orange-500 transition duration-300"><%= username %></span>
-                                <i id="user-menu-arrow" class="fas fa-chevron-down ml-1 transition-transform duration-500 group-hover:rotate-180"></i>
+                        <div class="relative group z-50">
+                            <button id="user-menu-toggle"
+                                class="flex items-center text-gray-700 focus:outline-none hover:text-primary transition duration-300">
+                                <img src="<%= profile_image_url || '/default-profile-image.png' %>" alt="User Avatar"
+                                    class="w-10 h-10 rounded-full mr-2 hover:scale-110 transition-transform duration-300">
+                                <span class="text-lg font-semibold group-hover:text-orange-500 transition duration-300">
+                                    <%= username %>
+                                </span>
+                                <i id="user-menu-arrow"
+                                    class="fas fa-chevron-down ml-1 transition-transform duration-500 group-hover:rotate-180"></i>
                             </button>
-                            <div id="user-menu" class="hidden absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md transition-all duration-500 transform scale-95 origin-top-right group-hover:scale-100 group-hover:opacity-100 opacity-0">
-                                <a href="/perfil" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Perfil</a>
-                                <a href="/animes/api/saved-animes" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Guardados</a>
-                                <a href="/profile" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Favoritos</a>
+                            <div id="user-menu"
+                                class="hidden absolute right-0 mt-2 w-56 bg-white shadow-lg rounded-md transition-all duration-500 transform origin-top-right z-50">
+                                <a href="/perfil"
+                                    class="block px-4 py-3 text-gray-700 hover:bg-orange-100 transition-all duration-300">Perfil</a>
+                                <a href="/animes/api/saved-animes"
+                                    class="block px-4 py-3 text-gray-700 hover:bg-orange-100 transition-all duration-300">Guardados</a>
+                                <a href="/profile"
+                                    class="block px-4 py-3 text-gray-700 hover:bg-orange-100 transition-all duration-300">Favoritos</a>
                                 <% if (isAdmin) { %> <!-- Verificación de admin -->
                                     <div class="border-t mt-2"></div> <!-- Separador opcional -->
-                                    <a href="/admin/panel" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Admin Panel</a>
-                                    <a href="/anime/upload" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Subir Anime</a>
-                                    <a href="/admin/animes/featured" class="block px-4 py-2 text-gray-700 hover:bg-orange-100 hover:pl-5 transition-all duration-300">Subir Anime Destacado</a>
-                                <% } %>
-                                <a href="/logout" class="block px-4 py-2 text-red-600 hover:bg-red-200 hover:pl-5 transition-all duration-300">Cerrar Sesión</a>
+                                    <a href="/admin/panel"
+                                        class="block px-4 py-3 text-gray-700 hover:bg-orange-100 transition-all duration-300">Admin
+                                        Panel</a>
+                                    <a href="/anime/upload"
+                                        class="block px-4 py-3 text-gray-700 hover:bg-orange-100 transition-all duration-300">Subir
+                                        Anime</a>
+                                    <a href="/admin/animes/featured"
+                                        class="block px-4 py-3 text-gray-700 hover:bg-orange-100 transition-all duration-300">Subir
+                                        Anime Destacado</a>
+                                    <% } %>
+                                        <a href="/logout"
+                                            class="block px-4 py-3 text-red-600 hover:bg-red-200 transition-all duration-300">Cerrar
+                                            Sesión</a>
                             </div>
                         </div>
                     </div>
